# cuFHEpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: aes_gpu.cuh  annihilate_gpu.cuh  ascon_gpu.cuh  bootstrap_gpu.cuh  circuitbootstrapping_gpu.cuh  cufhe_gpu.cuh  error_gpu.cuh  gatebootstrapping_gpu.cuh  keyswitch_gpu.cuh  ntt_small_modulus.cuh  utils_gpu.cuh
include/details/: utils_gpu.cuh
include/ntt_gpu/: ntt.cuh  ntt_gpuntt.cuh  ntt_small_modulus.cuh
src/: CMakeLists.txt  aes_gpu.cu  annihilate_gpu.cu  ascon_gpu.cu  bootstrap_gpu.cu  circuitbootstrapping_gpu.cu  cufhe_gates_gpu.cu  cufhe_gpu.cu  fft_negacyclic.cu  keyswitch_gpu.cu  ntt_small_modulus.cu
src/ntt_gpu/: ntt_small_modulus.cu
test/: CMakeLists.txt  test_accumulate_diag.cu  test_aes_decrypt_gpu.cu  test_annihilate_gpu.cu  test_ascon_xof_gpu.cu  test_backend_gate_bench.cu  test_blind_rotate_compare.cu  test_block_binary_gpu.cc  test_circuitbootstrapping_gpu.cu  test_compare_cpu_gpu.cu  test_cpu_lvl02.cc  test_fft_perf.cu  test_fft_roundtrip.cu  test_gate_gpu.cc  test_gate_gpu_lvl02.cc  test_gate_gpu_multi.cc  test_intensive.cc  test_keyswitch_diag.cu  test_perf.cc  test_single_cmux.cu
thirdparties/: CMakeLists.txt
thirdparties/tfhe-rs-fft/: fft_negacyclic.cuh
